# qgis-plugin-ci

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .qgis-plugin-ci  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  genindex.html  index.html  nose2.cfg  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: modules.doctree  qgispluginci.changelog.doctree  qgispluginci.doctree  qgispluginci.exceptions.doctree  qgispluginci.parameters.doctree  qgispluginci.release.doctree  qgispluginci.translation.doctree  qgispluginci.utils.doctree  qgispluginci.version_note.doctree
.doctrees/configuration/: exclude.doctree  options.doctree  submodules.doctree  translation.doctree
.doctrees/development/: contribute.doctree  documentation.doctree  environment.doctree  history.doctree  testing.doctree
.doctrees/misc/: faq.doctree
.doctrees/usage/: ci_docker.doctree  ci_github.doctree  ci_gitlab.doctree  ci_travis.doctree  cli_changelog.doctree  cli_package.doctree  cli_release.doctree  cli_translation.doctree
.github/: dependabot.yml  release.yml
.github/workflows/: docs_builder.yml  pyqt6_test.yml  release-refactor-tests.yml  release.yml  test.yml  wheel.yml
_apidoc/: modules.html  qgispluginci.changelog.html  qgispluginci.exceptions.html  qgispluginci.html  qgispluginci.parameters.html  qgispluginci.release.html  qgispluginci.translation.html  qgispluginci.utils.html  qgispluginci.version_note.html
_modules/: index.html
_modules/qgispluginci/: changelog.html  exceptions.html  utils.html  version_note.html
_sources/_apidoc/: modules.rst.txt  qgispluginci.changelog.rst.txt  qgispluginci.exceptions.rst.txt  qgispluginci.parameters.rst.txt  qgispluginci.release.rst.txt  qgispluginci.rst.txt  qgispluginci.translation.rst.txt  qgispluginci.utils.rst.txt  qgispluginci.version_note.rst.txt
_sources/development/: documentation.md.txt  testing.md.txt
_sources/usage/: ci_github.md.txt  cli_changelog.md.txt  cli_translation.md.txt
configuration/: exclude.html  options.html  submodules.html  translation.html
development/: contribute.html  documentation.html  environment.html  history.html  testing.html
docs/: conf.py  index.md  robots.txt
docs/configuration/: exclude.md  options.md  plugin_path.md  submodules.md  translation.md
docs/development/: contribute.md  documentation.md  environment.md  testing.md
docs/misc/: credits.md  faq.md
docs/usage/: ci_docker.md  ci_github.md  ci_gitlab.md  ci_travis.md  cli_changelog.md  cli_package.md  cli_release.md  submodules.md
misc/: faq.html
qgis_plugin_CI_testing/: __init__.py  metadata.txt  qgis_plugin_ci_testing_plugin.py  resources.qrc
qgispluginci/: __about__.py  __init__.py  __main__.py  __version__.py  changelog.py  cli.py  exceptions.py  parameters.py  plugins.xml.template  release.py  translation.py  utils.py  version_note.py
qgispluginci/translation_clients/: baseclient.py  transifex.py
requirements/: base.txt  development.txt  documentation.txt  translation.txt
scripts/: qgis_plugin_ci.py
test/: __init__.py  plugins.xml.expected  test_changelog.py  test_parameters.py  test_release.py  test_translation.py  test_utils.py  utils.py
test/fixtures/: .qgis-plugin-ci  .qgis-plugin-ci-test-changelog.yaml  CHANGELOG.md  pyproject.toml  setup.cfg
usage/: ci_docker.html  ci_github.html  ci_gitlab.html  ci_travis.html  cli_changelog.html  cli_package.html  cli_release.html  cli_translation.html
