[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis-plugin-ci"
dynamic = ["version", "readme"]
authors = [
    {name = "Denis Rouzaud", email = "denis@opengis.ch"},
    {name = "Etienne Trimaille", email = "etienne.trimaille@gmail.com"},
    {name = "Julien Moura", email = "dev@ingeoveritas.com"},
]
description = "Let qgis-plugin-ci package and release your QGIS plugins for you. Have a tea or go hiking meanwhile. Contains scripts to perform automated testing and deployment for QGIS plugins. These scripts are written for and tested on GitHub Actions, GitLab CI, Travis-CI, and Transifex."
requires-python = ">=3.10"
keywords = ["QGIS", "CI", "changelog", "plugin"]
license = {text = "GPLv3"}
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: System Administrators",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "GitPython>=3.1,<3.2",
    "PyGithub>=2.9.1,<2.10",
    "PyQt5>=5.15,<5.16",
    "pyqt5ac>=1.2,<1.3",
    "python-slugify>=4.0,<8.1",
    "pyyaml>=5.4,<6.1",
    "requests>=2.32.4",
    "six>=1.16.0",
    "transifex-python>=3.2,<4.0",
    "tomli >= 2.2; python_full_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.1",
    "flake8-builtins>=1.5",
    "flake8-print>=5",
    "pre-commit>=4.5,<5",
    "ruff>=0.15.11,<0.16",
    # testing: TODO: move into a separate test section
    "nose2>=0.15.1,<0.17"
    ]

doc = [
    "furo>=2024",
    "myst-parser[linkify]>=4",
    "sphinx-autobuild>=2024",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6.0",
    "sphinx-sitemap>=2.4",
    "tomli >= 2.2; python_full_version < '3.11'",
]

[project.scripts]
qgis-plugin-ci = "qgispluginci.cli:cli"

[project.urls]
homepage = "https://opengisch.github.io/qgis-plugin-ci/"
documentation = "https://opengisch.github.io/qgis-plugin-ci/"
repository = "https://github.com/opengisch/qgis-plugin-ci/"
tracker = "https://github.com/opengisch/qgis-plugin-ci/issues"

[tool.ruff.lint]
select = [
    "I",   # isort
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
split-on-trailing-comma = true

[tool.setuptools]
packages = ["qgispluginci", "qgispluginci.translation_clients"]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
