[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis-plugin-ci"
dynamic = ["version", "readme"]
authors = [
    {name = "Denis Rouzaud", email = "denis@opengis.ch"},
    {name = "Etienne Trimaille", email = "etienne.trimaille@gmail.com"},
    {name = "Julien Moura", email = "dev@ingeoveritas.com"},
]
description = "Let qgis-plugin-ci package and release your QGIS plugins for you. Have a tea or go hiking meanwhile. Contains scripts to perform automated testing and deployment for QGIS plugins. These scripts are written for and tested on GitHub Actions, GitLab CI, Travis-CI, and Transifex."
requires-python = ">=3.10"
keywords = ["QGIS", "CI", "changelog", "plugin"]
license = {text = "GPLv3"}
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: System Administrators",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "GitPython>=3.1,<3.2",
    "PyGithub>=2.9.1,<2.10",
    "PyQt5>=5.15,<5.16",
    "pyqt5ac>=1.2,<1.3",
    "python-slugify>=4.0,<8.1",
    "pyyaml>=5.4,<6.1",
    "requests>=2.32.4",
    "six>=1.16.0",
    "transifex-python>=3.2,<4.0",
    "tomli >= 2.2; python_full_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5,<5",
    "ruff>=0.15.11,<0.16",
    # testing: TODO: move into a separate test section
    "pytest-cov>=7.1.0,<8",
]

doc = [
    "furo>=2024",
    "myst-parser[linkify]>=4",
    "sphinx-autobuild>=2024",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6.0",
    "sphinx-sitemap>=2.4",
    "tomli >= 2.2; python_full_version < '3.11'",
]

[project.scripts]
qgis-plugin-ci = "qgispluginci.cli:cli"

[project.urls]
homepage = "https://opengisch.github.io/qgis-plugin-ci/"
documentation = "https://opengisch.github.io/qgis-plugin-ci/"
repository = "https://github.com/opengisch/qgis-plugin-ci/"
tracker = "https://github.com/opengisch/qgis-plugin-ci/issues"

# -- TOOLING --
[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
ignore_errors = true
show_missing = true

[tool.coverage.run]
branch = true
include = ["qgispluginci/*"]
omit = [".venv/*", "*tests*"]

[tool.pytest.ini_options]
addopts = """
    --junitxml=junit/test-results.xml
    --cov-append test/
    --cov-config=pyproject.toml
    --cov=qgispluginci
    --cov-report=html
    --cov-report=term
    --cov-report=xml
    --ignore=test/_wip/
"""
junit_family = "xunit2"
log_cli = true
log_cli_level = "DEBUG"
minversion = "5.0"
norecursedirs = ".* build dev development dist docs CVS fixtures _darcs {arch} *.egg venv _wip"
python_files = "test_*.py"
testpaths = ["test"]

[tool.ruff]
exclude = ["qgis_plugin_CI_testing/**"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "I",   # isort
    "LOG", # flake8-logging
    "T20", # flake8-print
]

ignore = [
    "ANN201", # Missing return type annotation for public function
    "ANN204", #  Missing return type annotation for special method `__init__`
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
    "E501",   # line too long (handled by black)
    # "E203", # whitespace before ':'
    # "E226", # missing whitespace around arithmetic operator
    # "E24",  # multiple spaces after ','
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402"]
"docs/conf.py" = [
    "A001",
    "ANN001",
    "ANN2",
    "S101",
    "T20",
] # Ignore rules in Sphinx config
"test/test_*.py" = ["ANN001", "ANN2", "S101", "T20"] # Ignore rules in tests

[tool.setuptools]
packages = ["qgispluginci", "qgispluginci.translation_clients"]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
